--- a/deno.json
+++ b/deno.json
@@ -27,6 +27,7 @@
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.0",
     "twind": "https://esm.sh/twind@0.16.19",
     "twind/": "https://esm.sh/twind@0.16.19/",
+    "@twind/aspect-ratio": "https://esm.sh/@twind/aspect-ratio@0.1.4",
     "$std/": "https://deno.land/std@0.193.0/"
   },
   "compilerOptions": {
