--- a/deno.json
+++ b/deno.json
@@ -28,7 +28,8 @@
     "twind": "https://esm.sh/twind@0.16.19",
     "twind/": "https://esm.sh/twind@0.16.19/",
     "@twind/aspect-ratio": "https://esm.sh/@twind/aspect-ratio@0.1.4",
-    "$std/": "https://deno.land/std@0.193.0/"
+    "$std/": "https://deno.land/std@0.193.0/",
+    "$icons/": "https://deno.land/x/tabler_icons_tsx@0.0.5/tsx/"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
