--- a/deno.json
+++ b/deno.json
@@ -29,7 +29,8 @@
     "twind/": "https://esm.sh/twind@0.16.19/",
     "@twind/aspect-ratio": "https://esm.sh/@twind/aspect-ratio@0.1.4",
     "$std/": "https://deno.land/std@0.193.0/",
-    "$icons/": "https://deno.land/x/tabler_icons_tsx@0.0.5/tsx/"
+    "$icons/": "https://deno.land/x/tabler_icons_tsx@0.0.5/tsx/",
+    "deno/ulid": "https://deno.land/x/ulid@v0.3.0"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
