--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -31,3 +31,22 @@ jobs:
 
       - name: Run tests
         run: deno test -A
+
+  deploy:
+    needs: test
+
+    runs-on: ubuntu-latest
+
+    permissions:
+      id-token: write
+      contents: read
+
+    steps:
+      - name: Setup repo
+        uses: actions/checkout@v3
+
+      - name: Deploy to Deno Deploy
+        uses: denoland/deployctl@v1
+        with:
+          project: avoid-fukutsu
+          entrypoint: main.ts
